# rag-demo-ai-search

./: .gitignore  DockerFile  Dockerfile  README.md  chapters.json  create_embedings_vectors.py  file_split.py  generate_api_response_json.py  main.py  pyproject.toml  rag.py  requirements.txt  response.json  search_index.py  table_content.py
.github/workflows/: cicd.yml
